--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script type="text/javascript" src="//cdn.plot.ly/plotly-latest.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.1/math.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wordcloud2.js/1.1.1/wordcloud2.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/wordcloud2.js/1.1.1/wordcloud2.min.js"></script>
     <div class="peakvis">
         <ul>
             <li><a href="#news"></a></li>
