--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="peakvis">
         <ul>
             <li><a href="#news"></a></li>
-            <li><a class="" href="layout.html"><img src="./logo.png" height="55" width="200"></a>
+            <li><a class="" href="layout.html"><img src="logo.png" height="55" width="200"></a>
             <li style="float:right"><a>
                     <button class="wagGit" onclick="pagGithub()">
                         <span class="icon">
